# suite_sparse_rust

./: .gitignore  Cargo.toml  README.md  tests.txt
input/80maiores/80maioresA/: lnsp_511.mtx  str__600.mtx  str____0.mtx
input/tests/: test1.mtx  test2.mtx  test3.mtx  test4-ipo.mtx  teste4-ipo.mtx
instances/: test1.mtx  test2.mtx  test3.mtx
instances/tests/: test1.mtx
outpout/: .~lock.IPO-10-3.csv#  IPO-10-3.csv
src/: cmr.rs  ils_old.rs  main.rs  matrix.rs  matrix_csr.rs  mils.rs  read_files.rs
