[package]
name = "suite-sparse-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
# remove after experiments
#lto = true
#codegen-units = 1
#panic = "abort"

# RUSTFLAGS="-C target-cpu=native" cargo build --release